style: remove top whitespace by fixing heroContent flex layout on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -449,10 +449,7 @@
   .desktopOnly { display: none; }
   
   .heroContent {
-    min-height: 60vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    margin-bottom: 10vh;
   }
 }
 
